// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageToolbar component tests Snapshot testing - auth disabled 1`] = `
<div>
  <div
    class="pf-c-toolbar"
    data-ouia-component-id="OUIA-Generated-Toolbar-1"
    data-ouia-component-type="page-toolbar"
    data-ouia-safe="true"
    id="pf-random-id-0"
  >
    <div
      class="pf-c-toolbar__group"
    >
      <div
        class="pf-c-toolbar__item pf-u-screen-reader pf-u-visible-on-md"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
          data-ouia-component-id="OUIA-Generated-Dropdown-1"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="pageToolbar-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pf-dropdown-toggle-id-0"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-image"
            >
              <img
                alt="User Avatar"
                class="pf-c-avatar"
                src="avatar.svg"
              />
            </span>
            <span
              class="pf-c-dropdown__toggle-text"
            >
              Anonymous
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`PageToolbar component tests Snapshot testing - auth enabled 1`] = `
<div>
  <div
    class="pf-c-toolbar"
    data-ouia-component-id="OUIA-Generated-Toolbar-2"
    data-ouia-component-type="page-toolbar"
    data-ouia-safe="true"
    id="pf-random-id-1"
  >
    <div
      class="pf-c-toolbar__group"
    >
      <div
        class="pf-c-toolbar__item pf-u-screen-reader pf-u-visible-on-md"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
          data-ouia-component-id="OUIA-Generated-Dropdown-2"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="pageToolbar-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pf-dropdown-toggle-id-1"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-image"
            >
              <img
                alt="User Avatar"
                class="pf-c-avatar"
                src="avatar.svg"
              />
            </span>
            <span
              class="pf-c-dropdown__toggle-text"
            >
              jdoe
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`PageToolbar component tests Testing dropdown items - auth disabled 1`] = `
<div>
  <div
    class="pf-c-toolbar"
    data-ouia-component-id="OUIA-Generated-Toolbar-5"
    data-ouia-component-type="page-toolbar"
    data-ouia-safe="true"
    id="pf-random-id-4"
  >
    <div
      class="pf-c-toolbar__group"
    >
      <div
        class="pf-c-toolbar__item pf-u-screen-reader pf-u-visible-on-md"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
          data-ouia-component-id="OUIA-Generated-Dropdown-5"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="pageToolbar-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-5"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pf-dropdown-toggle-id-8"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-image"
            >
              <img
                alt="User Avatar"
                class="pf-c-avatar"
                src="avatar.svg"
              />
            </span>
            <span
              class="pf-c-dropdown__toggle-text"
            >
              Anonymous
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`PageToolbar component tests Testing dropdown items - auth enabled 1`] = `
<div>
  <div
    class="pf-c-toolbar"
    data-ouia-component-id="OUIA-Generated-Toolbar-3"
    data-ouia-component-type="page-toolbar"
    data-ouia-safe="true"
    id="pf-random-id-2"
  >
    <div
      class="pf-c-toolbar__group"
    >
      <div
        class="pf-c-toolbar__item pf-u-screen-reader pf-u-visible-on-md"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
          data-ouia-component-id="OUIA-Generated-Dropdown-3"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="pageToolbar-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pf-dropdown-toggle-id-2"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-image"
            >
              <img
                alt="User Avatar"
                class="pf-c-avatar"
                src="avatar.svg"
              />
            </span>
            <span
              class="pf-c-dropdown__toggle-text"
            >
              jdoe
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`PageToolbar component tests Testing logout - auth enabled 1`] = `
<div>
  <div
    class="pf-c-toolbar"
    data-ouia-component-id="OUIA-Generated-Toolbar-4"
    data-ouia-component-type="page-toolbar"
    data-ouia-safe="true"
    id="pf-random-id-3"
  >
    <div
      class="pf-c-toolbar__group"
    >
      <div
        class="pf-c-toolbar__item pf-u-screen-reader pf-u-visible-on-md"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
          data-ouia-component-id="OUIA-Generated-Dropdown-4"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="pageToolbar-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle pf-m-plain"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pf-dropdown-toggle-id-7"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-image"
            >
              <img
                alt="User Avatar"
                class="pf-c-avatar"
                src="avatar.svg"
              />
            </span>
            <span
              class="pf-c-dropdown__toggle-text"
            >
              jdoe
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;
